Add Migrations and Some Finalization

--- a/AMS/appsettings.json
+++ b/AMS/appsettings.json
@@ -1,9 +1,10 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=AMS7;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Memory": "AMS7"
+    "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=AMS8;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "HFSqlServer": "Server=(localdb)\\mssqllocaldb;Database=AMS8;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Memory": "AMS8"
   },
-  "Database": "Memory",
+  "Database": "SqlServer",
   "Registration": {
     "Administrator": {
       "Username": "admin",
