Add locations.csv file

--- a/AMS/AMS.csproj
+++ b/AMS/AMS.csproj
@@ -24,4 +24,11 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <None Update="locations.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
