Build TicketDemo case builder

--- a/AMS/appsettings.json
+++ b/AMS/appsettings.json
@@ -4,7 +4,8 @@
     "HFSqlServer": "Server=(localdb)\\mssqllocaldb;Database=AMS8;Trusted_Connection=True;MultipleActiveResultSets=true",
     "Memory": "AMS8"
   },
-  "Database": "SqlServer",
+  "Database": "Memory",
+  "BuildCase": "TicketDemo", // "", "Syriatel", "TicketDemo"
   "Registration": {
     "Administrator": {
       "Username": "admin",
