Add Attachments Views

--- a/AMS/appsettings.json
+++ b/AMS/appsettings.json
@@ -5,7 +5,7 @@
     "Memory": "AMS8"
   },
   "Database": "Memory",
-  "BuildCase": "", // "", "Syriatel", "TicketDemo"
+  "BuildCase": "TicketDemo", // "", "Syriatel", "TicketDemo"
   "Registration": {
     "Administrator": {
       "Username": "admin",
